# swig-tracker

./: .gitignore  CMakeLists.txt  makefile  my_lib.cpp  my_lib.hpp  my_lib.i  my_lib.py  py_lib.cpp  py_lib.hpp  py_lib.i  py_lib.py  readme.txt  test.py
doc/: swig.key
libs/: detector.cpp  detector.h  makefile
